# my-laboratory

./: CMakeLists.txt  README.md
practice/: Demo1.cpp  Demo2.cpp  Demo3.cpp  Demo4.cpp  Demo5.cpp  Demo6.cpp  Demo7.cpp  Demo8.cpp
project/: Demo1.cpp
project/lidar/: LidarClient.hpp  LidarClient.inl
project/lidar/concept/: ConnectableConcept.hpp
project/weigt/: WeightTest.cpp
project/weigt/weightIntelligentRecognitionModule/: WeightRecognitionModule.cpp  WeightRecognitionModule.hpp
project/weigt/weightIntelligentRecognitionModule/core/cycleExtractor/abstract/: AbstractCycleExtractor.cpp  AbstractCycleExtractor.hpp
project/weigt/weightIntelligentRecognitionModule/core/dataProcessor/abstract/: AbstractDataProcessor.cpp  AbstractDataProcessor.hpp
project/weigt/weightIntelligentRecognitionModule/core/waveAnalyzer/abstract/: AbstractWaveAnalyzer.cpp  AbstractWaveAnalyzer.hpp
project/weigt/weightIntelligentRecognitionModule/core/weightCalculator/abstract/: AbstractWeightCalculator.cpp  AbstractWeightCalculator.hpp
project/weigt/weightIntelligentRecognitionModule/factory/abstract/: AbstractWeightRecognitionFactory.cpp  AbstractWeightRecognitionFactory.hpp
project/weigt/weightIntelligentRecognitionModule/factory/implements/default/: DefaultWeightRecognitionFactory.cpp  DefaultWeightRecognitionFactory.hpp
project/weigt/weightIntelligentRecognitionModule/scalingFactor/abstract/: AbstractScalingFactorCalculator.cpp  AbstractScalingFactorCalculator.hpp
project/weigt/weightIntelligentRecognitionModule/scalingFactor/types/scalingCoefficients/: WeightScalingCoefficients.hpp
project/weigt/weightIntelligentRecognitionModule/service/weightRecognition/abstract/: AbstractWeightRecognitionService.cpp  (+1 more)
project/weigt/weightIntelligentRecognitionModule/test/: Demo1.cpp  Demo2.cpp
project/weigt/weightIntelligentRecognitionModule/tools/weightConverter/: WeightUnitConverter.cpp  WeightUnitConverter.hpp
study/: Demo1.cpp  Demo2.cpp  Demo3.cpp
test/: ConsolePrinter.cpp  ConsolePrinter.hpp  IPrinter.hpp
(+14 files in other folders)
